<resources>
    <string name="app_name">CalculatorAndroid</string>
    <string name="title_activity_settings">Settings</string>

    <string name="fromView">From</string>
    <string name="toView">To</string>
    <string name="fromHint">Enter a number</string>
    <string name="toHint">Enter a number</string>
    <string name="fromUnit">Meters</string>
    <string name="toUnit">Miles</string>
    <string name="conversion_calculator">Conversion Calculator</string>
    <string name="enter_from_value">Enter from value</string>
    <string name="enter_to_value">Enter to value</string>
    <string name="meters">Meters</string>
    <string name="yards">Yards</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="calculate">Calculate</string>
    <string name="mode">Mode</string>
    <string name="clear">Clear</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string-array name="length">
        <item>Miles</item>
        <item>Meters</item>
        <item>Yards</item>
    </string-array>
    <string-array name="volume">
        <item>Gallons</item>
        <item>Quarts</item>
        <item>Liters</item>
    </string-array>
    <string name="title_activity_history">history</string>
    <string name="origination">Origination</string>
    <string name="date_of_calculation">date of calculation</string>
    <string name="image_of_conversion">Image of conversion</string>
</resources>
